--- a/src/components/common/login/login.scss
+++ b/src/components/common/login/login.scss
@@ -1,5 +1,5 @@
 @import '../../../styles/variable.scss';
-@import '../../../styles//common.scss';
+@import '../../../styles/common.scss';
 
 .login {
   display: flex;
