--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -5,9 +5,12 @@ $border-radius: 8px;
 $content-background-color: #fafafa;
 $main-color: #222;
 $overlay-color: rgba(#3d3d3d, .3);
-$accent-color: #b79a57;
+$accent-color: #e1b621;
 $divide-line-color: #f5f5f5;
 $grey-background-color: #f5f5f5;
+
+$placeholder-icon-color: #e9e9e9;
+$placeholder-icon-size: 200px;
 
 $page-spacing: 24px;
 
