--- a/src/components/common/login/login.scss
+++ b/src/components/common/login/login.scss
@@ -6,15 +6,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 400px;
+  width: 500px;
   background: white;
-  padding: $page-spacing * 3 $page-spacing $page-spacing;
+  padding: $page-spacing * 5 $page-spacing $page-spacing * 3;
 
   .logo {
-    width: 160px;
-    height: 160px;
+    width: 220px;
+    height: 220px;
     background: url(@oss/logo.png);
-    background-size: 160px 160px;
+    background-size: 220px 220px;
     background-color: $grey-background-color;
     border-radius: 50%;
   }
@@ -22,7 +22,7 @@
   .title {
     font-size: $title-font-size;
     margin: $block-spacing-v5 * 3 0 0;
-    color: $accent-color;
+    color: $main-color;
   }
 
   .btn {
@@ -31,6 +31,8 @@
     margin: $block-spacing-v5 0 $block-spacing-v5 / 2;
     background: $main-color;
     color: $accent-color;
-    padding: 0 $block-spacing-v5 * 2;
+    padding: 0 $block-spacing-v5 * 3;
+    height: $btn-size-default;
+    line-height: $btn-size-default;
   }
 }
