--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -26,3 +26,7 @@ $content-font-size: 26px;
 $btn-font-size: 26px;
 $assist-font-size: 24px;
 $tip-font-size: 22px;
+
+$btn-size-small: 66rpx;
+$btn-size-default: 80rpx;
+$btn-size-big: 94rpx;
