--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -44,3 +44,8 @@ $navigation-height: $capsule-padding * 2 + $capsule-height;
 $navigation-font-size: 15PX;
 $navigation-icon-font-size: 25PX;
 $navigation-box-shadow: 0 2PX 2PX #222;
+
+$tabbar-background-color: black;
+$tabbar-height: 90px;
+$tabbar-box-shadow: 0 2px 10px rgba(black, .3);
+$tabbar-icon-font-size: 22px;
