--- a/src/app.global.scss
+++ b/src/app.global.scss
@@ -31,19 +31,19 @@ page {
 
 .icon-search:before { content: "\e613"; }
 
-.icon-shop:before { content: "\ea8b"; }
-
-.icon-share:before { content: "\e60f"; }
-
 .icon-liwu:before { content: "\e685"; }
 
-.icon-cart:before { content: "\e60e"; }
+.icon-shop:before { content: "\e65d"; }
 
 .icon-arrow-down:before { content: "\e615"; }
+
+.icon-home:before { content: "\e65f"; }
 
 .icon-clover:before { content: "\e604"; }
 
 .icon-arrow-left:before { content: "\e610"; }
+
+.icon-loading:before { content: "\e65e"; }
 
 .icon-quality:before { content: "\e63d"; }
 
@@ -51,15 +51,16 @@ page {
 
 .icon-service:before { content: "\e603"; }
 
+.icon-share:before { content: "\e7e7"; }
+
 .icon-login-fail:before { content: "\e63b"; }
 
 .icon-order-empty:before { content: "\e646"; }
 
-.icon-home:before { content: "\e601"; }
-
 .icon-redpacket-empty:before { content: "\e65b"; }
 
-.icon-user:before { content: "\e6a8"; }
+.icon-cart:before { content: "\e607"; }
 
 .icon-arrow-up:before { content: "\e602"; }
+
 
