--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,6 +2,7 @@
 
 .home {
   min-height: 100vh;
+  background: url(https://xmpt-sit.oss-cn-shenzhen.aliyuncs.com/16e4df33c7c6b83e19091dd381ef92b2);
 
   .content {
     overflow: hidden;
